@@ -27,10 +27,7 @@ import de.uka.ilkd.key.rule.conditions.TypeResolver;
 import de.uka.ilkd.key.rule.tacletbuilder.*;
 import de.uka.ilkd.key.util.parsing.BuildingException;
 
-import org.key_project.logic.Choice;
-import org.key_project.logic.ChoiceExpr;
-import org.key_project.logic.Name;
-import org.key_project.logic.Namespace;
+import org.key_project.logic.*;
 import org.key_project.logic.op.Function;
 import org.key_project.logic.op.QuantifiableVariable;
 import org.key_project.logic.op.sv.SchemaVariable;
@@ -139,7 +136,7 @@ public class TacletPBuilder extends ExpressionBuilder {
         TacletBuilder<?> b = peekTBuilder();
         JTerm t = accept(ctx.t);
         List<JTerm> avoidConditions = mapOf(ctx.avoidCond);
-        b.setTrigger(new Trigger(triggerVar, t, ImmutableList.fromList(avoidConditions)));
+        b.setTrigger(new Trigger(triggerVar, t, ImmutableList.<Term>fromList(avoidConditions)));
         return null;
     }
 
@@ -165,16 +162,18 @@ public class TacletPBuilder extends ExpressionBuilder {
             TacletBuilder<?> b = createTacletBuilderFor(null, ApplicationRestriction.NONE, ctx);
             currentTBuilder.push(b);
             SequentFormula sform = new SequentFormula(form);
-            Sequent addSeq = JavaDLSequentKit.createAnteSequent(ImmutableSLList.singleton(sform));
-            ImmutableList<Taclet> noTaclets = ImmutableSLList.nil();
+            Sequent addSeq = JavaDLSequentKit.createAnteSequent(ImmutableList.singleton(sform));
+            ImmutableList<Taclet> noTaclets = ImmutableList.nil();
             DefaultImmutableSet<SchemaVariable> noSV = DefaultImmutableSet.nil();
             addGoalTemplate(null, null, addSeq, noTaclets, noSV, null, null, ctx);
             b.setName(new Name(name));
             b.setChoices(choices);
             b.setAnnotations(tacletAnnotations);
-            b.setOrigin(BuilderHelpers.getPosition(ctx));
             Taclet r = b.getTaclet();
-            registerTaclet(ctx, r);
+            String doc = processDocumentation(ctx.doc);
+            String origin = BuilderHelpers.getPosition(ctx);
+
+            registerTaclet(ctx, r, doc, origin);
             currentTBuilder.pop();
             return r;
         }
@@ -187,9 +186,8 @@ public class TacletPBuilder extends ExpressionBuilder {
             assumesSeq = accept(ctx.assumesSeq);
         }
 
-        @Nullable
         Object find = accept(ctx.find);
-        Sequent seq = find instanceof Sequent ? (Sequent) find : null;
+        Sequent seq = (find instanceof Sequent s) ? s : null;
 
         var applicationRestriction = ApplicationRestriction.NONE;
         if (!ctx.SAMEUPDATELEVEL().isEmpty()) {
@@ -218,10 +216,11 @@ public class TacletPBuilder extends ExpressionBuilder {
         accept(ctx.modifiers());
         b.setChoices(choices);
         b.setAnnotations(tacletAnnotations);
-        b.setOrigin(BuilderHelpers.getPosition(ctx));
+        String origin = BuilderHelpers.getPosition(ctx);
         try {
             Taclet r = peekTBuilder().getTaclet();
-            registerTaclet(ctx, r);
+            String doc = processDocumentation(ctx.doc);
+            registerTaclet(ctx, r, doc, origin);
             setSchemaVariables(schemaVariables().parent());
             currentTBuilder.pop();
             return r;
@@ -238,8 +237,11 @@ public class TacletPBuilder extends ExpressionBuilder {
             ctx.start.getTokenSource().getSourceName(), ctx.start.getLine());
     }
 
-    private void registerTaclet(ParserRuleContext ctx, Taclet taclet) {
+    private void registerTaclet(ParserRuleContext ctx, Taclet taclet,
+            @Nullable String documentation, @Nullable String origin) {
         taclet2Builder.put(taclet, peekTBuilder());
+        docsSpace().setDocumentation(taclet, documentation);
+        docsSpace().setOrigin(taclet, origin);
         LOGGER.trace("Taclet announced: \"{}\" from {}:{}", taclet.name(),
             ctx.start.getTokenSource().getSourceName(), ctx.start.getLine());
     }
@@ -257,7 +259,7 @@ public class TacletPBuilder extends ExpressionBuilder {
         if (genParams != null) {
             var psd = namespaces().parametricSorts().lookup(ctx.name.getText());
             assert psd != null;
-            ImmutableList<GenericArgument> args = ImmutableSLList.nil();
+            ImmutableList<GenericArgument> args = ImmutableList.nil();
             for (int i = psd.getParameters().size() - 1; i >= 0; i--) {
                 args = args.prepend(new GenericArgument(psd.getParameters().get(i).sort()));
             }
@@ -363,7 +365,7 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         tacletBuilder.setFind(tb.func(function, tb.var(x)));
         tacletBuilder.setAssumesSequent(JavaDLSequentKit.createAnteSequent(
-            ImmutableSLList
+            ImmutableList
                     .singleton(new SequentFormula(tb.equals(tb.func(consFn, args), tb.var(x))))));
         tacletBuilder.addTacletGoalTemplate(new RewriteTacletGoalTemplate(tb.var(res)));
         tacletBuilder.setApplicationRestriction(
@@ -418,8 +420,8 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         var use = tb.all(qvar, tb.var(phi));
         var useCase = new TacletGoalTemplate(
-            JavaDLSequentKit.createAnteSequent(ImmutableSLList.singleton(new SequentFormula(use))),
-            ImmutableSLList.nil());
+            JavaDLSequentKit.createAnteSequent(ImmutableList.singleton(new SequentFormula(use))),
+            ImmutableList.nil());
         useCase.setName("Use case of " + ctx.name.getText());
         cases.add(new GoalTemplAndVars(useCase, null));
 
@@ -434,8 +436,8 @@ public class TacletPBuilder extends ExpressionBuilder {
         var constr = createQuantifiedFormula(it, qvar, var, sort);
         var goal = new TacletGoalTemplate(
             JavaDLSequentKit
-                    .createSuccSequent(ImmutableSLList.singleton(new SequentFormula(constr.term))),
-            ImmutableSLList.nil());
+                    .createSuccSequent(ImmutableList.singleton(new SequentFormula(constr.term))),
+            ImmutableList.nil());
         goal.setName(it.getText());
         return new GoalTemplAndVars(goal, constr.vars);
     }
@@ -457,7 +459,7 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         var cases = ctx.datatype_constructor().stream()
                 .map(it -> createQuantifiedFormula(it, qvar, tb.var(phi), sort))
-                .collect(Collectors.toList());
+                .toList();
 
         for (var c : cases) {
             if (c.vars == null)
@@ -471,8 +473,8 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         var goal = new TacletGoalTemplate(
             JavaDLSequentKit
-                    .createAnteSequent(ImmutableSLList.singleton(new SequentFormula(axiom))),
-            ImmutableSLList.nil());
+                    .createAnteSequent(ImmutableList.singleton(new SequentFormula(axiom))),
+            ImmutableList.nil());
         tacletBuilder.addTacletGoalTemplate(goal);
 
         tacletBuilder.setName(new Name(String.format("DT_%s_Axiom", sort.name())));
@@ -559,9 +561,9 @@ public class TacletPBuilder extends ExpressionBuilder {
             for (int i = 0; i < args.length; i++) {
                 args[i] = variables.get(context.argName.get(i).getText());
             }
-            Sequent addedSeq = JavaDLSequentKit.createAnteSequent(ImmutableSLList
+            Sequent addedSeq = JavaDLSequentKit.createAnteSequent(ImmutableList
                     .singleton(new SequentFormula(tb.equals(tb.var(phi), tb.func(func, args)))));
-            TacletGoalTemplate goal = new TacletGoalTemplate(addedSeq, ImmutableSLList.nil());
+            TacletGoalTemplate goal = new TacletGoalTemplate(addedSeq, ImmutableList.nil());
             goal.setName("#var = " + context.name.getText());
             b.addTacletGoalTemplate(goal);
         }
@@ -582,10 +584,6 @@ public class TacletPBuilder extends ExpressionBuilder {
 
         if (ctx.DISPLAYNAME() != null && !ctx.DISPLAYNAME().isEmpty()) {// last entry
             b.setDisplayName(Objects.requireNonNull(accept(ctx.dname)));
-        }
-
-        if (ctx.HELPTEXT() != null) { // last entry
-            b.setHelpText(accept(ctx.htext));
         }
 
         mapOf(ctx.triggers());
@@ -798,10 +796,9 @@ public class TacletPBuilder extends ExpressionBuilder {
         String name = accept(ctx.string_value());
 
         Sequent addSeq = JavaDLSequentKit.getInstance().getEmptySequent();
-        ImmutableSLList<Taclet> addRList = ImmutableSLList.nil();
+        ImmutableList<Taclet> addRList = ImmutableList.nil();
         DefaultImmutableSet<SchemaVariable> addpv = DefaultImmutableSet.nil();
 
-        @Nullable
         Object rwObj = accept(ctx.replacewith());
         if (ctx.add() != null) {
             addSeq = accept(ctx.add());
@@ -850,29 +847,32 @@ public class TacletPBuilder extends ExpressionBuilder {
     private @NonNull TacletBuilder<?> createTacletBuilderFor(Object find,
             ApplicationRestriction applicationRestriction,
             ParserRuleContext ctx) {
-        if (find == null) {
-            return new NoFindTacletBuilder();
-        } else if (find instanceof JTerm) {
-            return new RewriteTacletBuilder<>().setFind((JTerm) find)
-                    .setApplicationRestriction(applicationRestriction);
-        } else if (find instanceof Sequent findSeq) {
-            if (findSeq.isEmpty()) {
+        switch (find) {
+            case null -> {
                 return new NoFindTacletBuilder();
-            } else if (findSeq.antecedent().size() == 1 && findSeq.succedent().isEmpty()) {
-                AntecTacletBuilder b = new AntecTacletBuilder();
-                b.setFind(findSeq);
-                b.setApplicationRestriction(applicationRestriction);
-                return b;
-            } else if (findSeq.antecedent().isEmpty() && findSeq.succedent().size() == 1) {
-                SuccTacletBuilder b = new SuccTacletBuilder();
-                b.setFind(findSeq);
-                b.setApplicationRestriction(applicationRestriction);
-                return b;
-            } else {
-                semanticError(ctx, "Unknown find-sequent (perhaps null?):" + findSeq);
             }
-        } else {
-            semanticError(ctx, "Unknown find class type: %s", find.getClass().getName());
+            case JTerm jTerm -> {
+                return new RewriteTacletBuilder<>().setFind(jTerm)
+                        .setApplicationRestriction(applicationRestriction);
+            }
+            case Sequent findSeq -> {
+                if (findSeq.isEmpty()) {
+                    return new NoFindTacletBuilder();
+                } else if (findSeq.antecedent().size() == 1 && findSeq.succedent().isEmpty()) {
+                    AntecTacletBuilder b = new AntecTacletBuilder();
+                    b.setFind(findSeq);
+                    b.setApplicationRestriction(applicationRestriction);
+                    return b;
+                } else if (findSeq.antecedent().isEmpty() && findSeq.succedent().size() == 1) {
+                    SuccTacletBuilder b = new SuccTacletBuilder();
+                    b.setFind(findSeq);
+                    b.setApplicationRestriction(applicationRestriction);
+                    return b;
+                } else {
+                    semanticError(ctx, "Unknown find-sequent (perhaps null?):" + findSeq);
+                }
+            }
+            default -> semanticError(ctx, "Unknown find class type: %s", find.getClass().getName());
         }
 
         throw new IllegalArgumentException(
